objects/Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Project_Activity__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <formula>Project_Activity__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Spent__c</fullName>
        <label>Actual Days Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDK_Assignee_Role__c</fullName>
        <label>CDK Assignee Role</label>
        <picklist>
            <picklistValues>
                <fullName>3PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Conversion Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Solutions Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Systems Analyst​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car!nk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account Manager (CAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Specialist (Unhook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Collector​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Specialist (ICD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Artwork Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Installation Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Follow-Up Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist (Box Upgrade)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Project Manager (Network / IPT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Tax Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM IT Support Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDK_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDK Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <formula>Project_Activity__r.Dealer_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_PSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on PSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Physically_Delete__c</fullName>
        <description>A Boolean Flag deriving whether the record is eligible to delete.  The value is true if the record has already begun to be processed.  For Project Tasks, the presence of an Actual Start Date would provide evidence that the record has indeed begun to be processed.</description>
        <formula>NOT(ISNULL(Actual_Start_Date__c) || ISBLANK(Actual_Start_Date__c))</formula>
        <label>Do Not Physically Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Report_to_Me__c</fullName>
        <formula>(NOT(ISBLANK( Manager_Id_Of_Project_Manager__c )) &amp;&amp; ( Manager_Id_Of_Project_Manager__c == $User.Id)) || 
(NOT(ISBLANK( CDK_Assignee__r.ManagerId )) &amp;&amp; ( CDK_Assignee__r.ManagerId == $User.Id)) ||
(NOT(ISBLANK(  Manager_Id_Of_Manager__c  )) &amp;&amp; ( Manager_Id_Of_Manager__c == $User.Id))</formula>
        <label>Does Report to Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Time_Spent__c</fullName>
        <label>Expected Time Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Activity_Name__c</fullName>
        <formula>Task_Definition__r.External_Activity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A system administrator field to support forced rollups via the logical rollup engine.</description>
        <label>Force Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Code__c</fullName>
        <label>Hold Code</label>
        <picklist>
            <picklistValues>
                <fullName>HM - MANUFACTURER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HF - FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC - CLIENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HN - NOSTART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HB - NEW DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD - DATA/CONVERSION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HX - NETWORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HL - LEGAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HT - TELEPHONY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - RISK ON CONTRACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Assigned_To_Me__c</fullName>
        <formula>NOT(ISBLANK( CDK_Assignee__c )) &amp;&amp; ( CDK_Assignee__c == $User.Id)</formula>
        <label>Is Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Managed_By_Me__c</fullName>
        <formula>NOT(ISBLANK( SubProject_Manager_Id__c )) &amp;&amp; ( SubProject_Manager_Id__c == $User.Id)</formula>
        <label>Is Project Managed By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Manager__c</fullName>
        <formula>Project_Activity__r.Milestone__r.SubProject__r.Manager_Id_Of_Manager__c</formula>
        <label>Manager Id Of Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Project_Manager__c</fullName>
        <formula>Project_Activity__r.Milestone__r.SubProject__r.Manager_Id_Of_Project_Manager__c</formula>
        <label>Manager Id Of Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <description>The result of the migration project task.  Please note: a status value indicating failure will drive the creation of a cloned project task to re-attempt the migration.</description>
        <label>Migration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Postgres – Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Postgres – Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Postgres – Transform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Postgres – Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Check Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Software issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Networking issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Account Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure – Forward Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Test Performed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive errors preventing test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <description>Used for Field set reference for Milestone description</description>
        <formula>Project_Activity__r.Milestone__r.Description__c</formula>
        <inlineHelpText>Used for Field set reference for Milestone description</inlineHelpText>
        <label>Milestone Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Id__c</fullName>
        <formula>CASESAFEID(Project_Activity__r.Milestone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifyWhenComplete__c</fullName>
        <formula>Task_Definition__r.NotifyWhenComplete__c</formula>
        <label>NotifyWhenComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_End_Dt_Delayed_Count__c</fullName>
        <label>Planned End Dt Delayed Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Dt_Delayed_Count__c</fullName>
        <label>Planned Start Dt Delayed Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Activity_Assignee_Role__c</fullName>
        <formula>TEXT(Project_Activity__r.CDK_Assignee_Role__c)</formula>
        <label>Project Activity CDK Assignee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Activity_CDK_Assignee__c</fullName>
        <description>A hidden field to provide the Project Task record immediate visibility to its parent’s CDK Assignee, and enable a workflow rule to fire to populate the just-created Project Task’s own CDK Assignee field with the same value.</description>
        <formula>CASESAFEID(Project_Activity__r.CDK_Assignee__c)</formula>
        <label>Project Activity CDK Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Activity_Client_Assignee__c</fullName>
        <description>A hidden field to provide the Project Task record immediate visibility to its parent’s Client Assignee, and enable a workflow rule to fire to populate the just-created Project Task’s own Client Assignee field with the same value.</description>
        <formula>Project_Activity__r.Client_Assignee__c</formula>
        <label>Project Activity Client Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Activity_Planned_End_Date__c</fullName>
        <description>A hidden field to provide the Project Task record immediate visibility to its parent’s Planned End Date, and enable a workflow rule to fire to populate the just-created Project Task’s own Planned End Date field with the same value.</description>
        <formula>Project_Activity__r.Planned_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Activity Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Activity_Planned_Start_Date__c</fullName>
        <description>A hidden field to provide the Project Task record immediate visibility to its parent’s Planned Start Date, and enable a workflow rule to fire to populate the just-created Project Task’s own Planned Start Date field with the same value.</description>
        <formula>Project_Activity__r.Planned_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Activity Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Activity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Project Activity</label>
        <referenceTo>Project_Activity__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project_Activity__r.Milestone__r.SubProject__r.Project__r.Id</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Deleted_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the record has been logically (but not physically) deleted, as a result of having been deleted upstream in RMS.  The field is checked as having been deleted specifically for RMS-driven deletes, but, the record was already &apos;In Progress&quot; for some work (and therefore needed to be preserved).</description>
        <label>RMS Deleted Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMS_Owned_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the record originated (i.e. was originally created) from RMS.  If true, then the record can only allow certain fields to be updated from RMS.</description>
        <label>RMS Owned Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMS_Task_Id__c</fullName>
        <description>The unique identifier of the RMS-created Project Task, referenced here as an external Id for ongoing source-to-target record matching between RMS and Salesforce (to support subsequent record updates originating from RMS).</description>
        <externalId>true</externalId>
        <label>RMS Task Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reason_Missed_Planned_End_Date__c</fullName>
        <description>Reason why the Actual End Date is later than the Planned End Date</description>
        <label>Reason Missed Planned End Date</label>
        <picklist>
            <picklistValues>
                <fullName>CDK Conversion Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Cancelled Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Missed Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversions Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery inaccurate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of client commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Date Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enough time scheduled originally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Box Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Swap Request – Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Solutions Team Missed Deadline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Not Applicable Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Client Declined Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step Not Contracted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>Project_Activity__r.Site_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Project_Activity__r.Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Not_Applicable__c</fullName>
        <formula>IF( !ISPICKVAL(Reason__c, &apos;&apos;) , True,
IF( RMS_Deleted_Flag__c = true, True,
False))</formula>
        <label>Status Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Status_Not_Applicable__c = true,&apos;Not Applicable&apos;,
IF(!ISBLANK(Actual_End_Date__c),&apos;Complete&apos;,
IF(!ISBLANK(Actual_Start_Date__c) &amp;&amp; ISBLANK(Actual_End_Date__c),&apos;In Progress&apos;,
IF(!ISBLANK( CDK_Assignee__c ),&apos;Assigned&apos;,
IF(ISBLANK( CDK_Assignee__c ),&apos;Unassigned&apos;,
null
)))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_ID__c</fullName>
        <formula>Project_Activity__r.Milestone__r.SubProject__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubProject ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Manager_Id__c</fullName>
        <formula>Project_Activity__r.Milestone__r.SubProject__r.Project_Manager__c</formula>
        <label>SubProject Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <description>Used for fieldset reference for SubProject Name</description>
        <formula>Project_Activity__r.SubProject_Name__c</formula>
        <inlineHelpText>Used for fieldset reference for SubProject Name</inlineHelpText>
        <label>SubProject Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Assignee_s_Manager__c</fullName>
        <description>Field to display the manager&apos;s name for the assigned resource</description>
        <formula>CDK_Assignee__r.Manager.FirstName &amp; &quot; &quot; &amp;  CDK_Assignee__r.Manager.LastName</formula>
        <inlineHelpText>This is an automated field that displays the task assignee&apos;s</inlineHelpText>
        <label>Task Assignee&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Definition</label>
        <referenceTo>Task_Definition__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_Cloned_to_New_Migration_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Cloned to New Migration Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <formula>IF(Status__c == &apos;Not Applicable&apos;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isStatusComplete__c</fullName>
        <formula>IF( Status__c = &apos;Complete&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStatusComplete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Assigned</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>All Assigned</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Assigned_Assigned_To_Me</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <filters>
            <field>RMS_Owned_Flag__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Assigned - Assigned To Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Assigned_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>All Assigned - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Assigned_Project_Managed_By_Me</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>All Assigned - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Complete</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Complete_Assigned_To_Me</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RMS_Owned_Flag__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Complete - Assigned To Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Complete_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Actual_Time_Spent__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Missed_Planned_End_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Migration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All Complete - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
</CustomObject>